вносит исправления по полученным замечаниям

--- a/source/index.html
+++ b/source/index.html
@@ -123,10 +123,10 @@
           <div class="live-in__gallery-item live-in__gallery-item--main">
             <h3>Экскурсии по Израилю <br> и знакомство с его историей</h3>
             <picture>
-              <source media="(max-width: 1024px)" srcset="img/excursion-mobile.webp">
+              <source media="(max-width: 1024px)" srcset="img/excursion-mobile.webp 1x">
               <source type="image/webp" srcset="img/excursion-desktop@1x.webp 1x, img/excursion-desktop@2x.webp 2x">
               <img src="img/excursion-desktop@1x.png" width="428" height="732" alt="Экскурсии"
-                srcset="img/excursion-desktop@1x.png 1x, img/excursion-desktopx@2x.png 2x" loading="lazy">
+                srcset="img/excursion-desktop@1x.png 1x, img/excursion-desktop@2x.png 2x" loading="lazy">
             </picture>
           </div>
           <div class="live-in__gallery-container">
@@ -135,7 +135,7 @@
               <picture>
                 <source media="(max-width: 1024px)" srcset="img/language-mobile.webp">
                 <source type="image/webp" srcset="img/language-desktop@1x.webp 1x, img/language-desktop@2x.webp 2x">
-                <img src="img/language-desktop@1x.png" width="428" height="732" alt="Экскурсии" srcset="img/language-desktop@1x.png 1x, img/language-desktopx@2x.png 2x" loading="lazy">
+                <img src="img/language-desktop@1x.png" width="428" height="732" alt="Экскурсии" srcset="img/language-desktop@1x.png 1x, img/language-desktop@2x.png 2x" loading="lazy">
               </picture>
             </div>
             <div class="live-in__gallery-item live-in__gallery-item--long">
@@ -143,7 +143,7 @@
               <picture>
                 <source media="(max-width: 1024px)" srcset="img/learning-mobile.webp">
                 <source type="image/webp" srcset="img/learning-desktop@1x.webp 1x, img/learning-desktop@2x.webp 2x">
-                <img src="img/learning-desktop@1x.png" width="428" height="732" alt="Обучение" srcset="img/learning-desktop@1x.png 1x, img/learning-desktopx@2x.png 2x" loading="lazy">
+                <img src="img/learning-desktop@1x.png" width="428" height="732" alt="Обучение" srcset="img/learning-desktop@1x.png 1x, img/learning-desktop@2x.png 2x" loading="lazy">
               </picture>
             </div>
             <div class="live-in__gallery-item live-in__gallery-item--long">
@@ -151,7 +151,7 @@
               <picture>
                 <source media="(max-width: 1024px)" srcset="img/projects-mobile.webp">
                 <source type="image/webp" srcset="img/projects-desktop@1x.webp 1x, img/projects-desktop@2x.webp 2x">
-                <img src="img/projects-desktop@1x.png" width="428" height="732" alt="Проекты" srcset="img/projects-desktop@1x.png 1x, img/projects-desktopx@2x.png 2x" loading="lazy">
+                <img src="img/projects-desktop@1x.png" width="428" height="732" alt="Проекты" srcset="img/projects-desktop@1x.png 1x, img/projects-desktop@2x.png 2x" loading="lazy">
               </picture>
             </div>
             <div class="live-in__gallery-item live-in__gallery-item--short">
@@ -159,7 +159,7 @@
               <picture>
                 <source media="(max-width: 1024px)" srcset="img/leader-mobile.webp">
                 <source type="image/webp" srcset="img/leader-desktop@1x.webp 1x, img/leader-desktop@2x.webp 2x">
-                <img src="img/leader-desktop@1x.png" width="428" height="732" alt="Лидерство" srcset="img/leader-desktop@1x.png 1x, img/leaeder-desktopx@2x.png 2x" loading="lazy">
+                <img src="img/leader-desktop@1x.png" width="428" height="732" alt="Лидерство" srcset="img/leader-desktop@1x.png 1x, img/leader-desktop@2x.png 2x" loading="lazy">
               </picture>
             </div>
           </div>
@@ -188,7 +188,7 @@
           </li>
           <li>
             <h3>Как определяется стоимость программы?</h3>
-            <p>Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
+            <p class="questions__list__active-item">Полная стоимость определяется организаторами в зависимости от направления. В большинстве случаев грант «Маса» не покрывает полную стоимость программы, и поэтому предусматривается определённая доля личного участия.</p>
             <button class="questions__open-description-btn questions__open-description-btn--disabled btn" type="button" aria-label="Открыть вопрос"></button>
           </li>
           <li>
@@ -422,17 +422,17 @@
             <address>Новосибирск, ул. Щетинкина 68, культурный центр «Бейт Менахем»</address>
             <div class="more-info__curator-social">
               <a href="#" aria-label="facebook">
-                <svg width="10" height="20">
+                <svg width="10" height="20" viewBox="0 -2 30 30">
                   <use xlink:href="img/sprite.svg#icon-fb"></use>
                 </svg>
               </a>
               <a href="#" aria-label="whatsapp">
-                <svg width="20" height="20">
+                <svg width="20" height="20" viewBox="-3 -2 30 30">
                   <use xlink:href="img/sprite.svg#icon-whatsapp"></use>
                 </svg>
               </a>
               <a href="#" aria-label="telegram">
-                <svg width="22" height="18">
+                <svg width="22" height="18" viewBox="-6 -3 30 30">
                   <use xlink:href="img/sprite.svg#icon-telegram"></use>
                 </svg>
               </a>
