вносит исправления по полученным замечаниям

--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
           <div class="live-in__gallery-item live-in__gallery-item--main">
             <h3>Экскурсии по Израилю <br> и знакомство с его историей</h3>
             <picture>
-              <source media="(max-width: 1024px)" srcset="img/excursion-mobile.webp 1x">
+              <source type="image/webp" media="(max-width: 1024px)" srcset="img/excursion-mobile.webp 1x">
               <source type="image/webp" srcset="img/excursion-desktop@1x.webp 1x, img/excursion-desktop@2x.webp 2x">
               <img src="img/excursion-desktop@1x.png" width="428" height="732" alt="Экскурсии"
                 srcset="img/excursion-desktop@1x.png 1x, img/excursion-desktop@2x.png 2x" loading="lazy">
@@ -133,7 +133,7 @@
             <div class="live-in__gallery-item live-in__gallery-item--short">
               <h3>Изучение иврита</h3>
               <picture>
-                <source media="(max-width: 1024px)" srcset="img/language-mobile.webp">
+                <source type="image/webp" media="(max-width: 1024px)" srcset="img/language-mobile.webp">
                 <source type="image/webp" srcset="img/language-desktop@1x.webp 1x, img/language-desktop@2x.webp 2x">
                 <img src="img/language-desktop@1x.png" width="428" height="732" alt="Экскурсии" srcset="img/language-desktop@1x.png 1x, img/language-desktop@2x.png 2x" loading="lazy">
               </picture>
@@ -141,7 +141,7 @@
             <div class="live-in__gallery-item live-in__gallery-item--long">
               <h3>Обучение современным <br> навыкам и профессиям</h3>
               <picture>
-                <source media="(max-width: 1024px)" srcset="img/learning-mobile.webp">
+                <source type="image/webp" media="(max-width: 1024px)" srcset="img/learning-mobile.webp">
                 <source type="image/webp" srcset="img/learning-desktop@1x.webp 1x, img/learning-desktop@2x.webp 2x">
                 <img src="img/learning-desktop@1x.png" width="428" height="732" alt="Обучение" srcset="img/learning-desktop@1x.png 1x, img/learning-desktop@2x.png 2x" loading="lazy">
               </picture>
@@ -149,7 +149,7 @@
             <div class="live-in__gallery-item live-in__gallery-item--long">
               <h3>Совместные творческие проекты с израильской молодёжью</h3>
               <picture>
-                <source media="(max-width: 1024px)" srcset="img/projects-mobile.webp">
+                <source type="image/webp" media="(max-width: 1024px)" srcset="img/projects-mobile.webp">
                 <source type="image/webp" srcset="img/projects-desktop@1x.webp 1x, img/projects-desktop@2x.webp 2x">
                 <img src="img/projects-desktop@1x.png" width="428" height="732" alt="Проекты" srcset="img/projects-desktop@1x.png 1x, img/projects-desktop@2x.png 2x" loading="lazy">
               </picture>
@@ -157,7 +157,7 @@
             <div class="live-in__gallery-item live-in__gallery-item--short">
               <h3>Развитие лидерства</h3>
               <picture>
-                <source media="(max-width: 1024px)" srcset="img/leader-mobile.webp">
+                <source type="image/webp" media="(max-width: 1024px)" srcset="img/leader-mobile.webp">
                 <source type="image/webp" srcset="img/leader-desktop@1x.webp 1x, img/leader-desktop@2x.webp 2x">
                 <img src="img/leader-desktop@1x.png" width="428" height="732" alt="Лидерство" srcset="img/leader-desktop@1x.png 1x, img/leader-desktop@2x.png 2x" loading="lazy">
               </picture>
